[tool.poetry]
name = "repl-html-render-site"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
config = "^0.5.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
